Add Update and List Retriever handlers (#14)